# TradeFast

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
config/: base.yaml  development.yaml  production.yaml
config/models/: ensemble.yaml  lightgbm.yaml  mamba.yaml  tft.yaml  xgboost.yaml
config/strategies/: multi_modal.yaml
scripts/: __init__.py  build_features.py  collect_data.py  live_trading.py  run_backtest.py  train_models.py
src/: __init__.py
src/backtest/: __init__.py  cost_model.py  engine.py  metrics.py
src/data/: __init__.py  loaders.py
src/data/ingestion/: __init__.py  base.py  binance_futures.py  binance_ohlcv.py  binance_orderbook.py  cryptopanic.py  fear_greed.py  reddit.py
src/data/processing/: __init__.py  cleaners.py  synchronizer.py  validators.py
src/data/storage/: __init__.py  duckdb_store.py  parquet_store.py
src/execution/: __init__.py  order_manager.py  risk_manager.py
src/features/: __init__.py  onchain_features.py  orderbook_features.py  pipeline.py  registry.py  sentiment_features.py  technical.py
src/models/: __init__.py  base.py
src/models/architectures/: __init__.py  lightgbm_model.py  mamba_model.py  tft_model.py  xgboost_model.py
src/models/encoders/: __init__.py  orderbook_encoder.py  price_encoder.py  sentiment_encoder.py
src/models/ensemble/: __init__.py  meta_learner.py  stacking.py
src/models/fusion/: __init__.py  cross_attention.py  hierarchical.py
src/models/meta_labeling/: __init__.py  meta_model.py  triple_barrier.py
src/strategy/: __init__.py  base.py  position_sizing.py  signal_generator.py
src/training/: __init__.py  cross_validation.py  optimization.py  progress.py  trainer.py
src/utils/: __init__.py  config.py  gpu_utils.py  logging.py
tests/: conftest.py
